--- a/index.html
+++ b/index.html
@@ -5,63 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mini Max Sum</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="./script.js"></script>
   </head>
   <body>
-    <label> input your array</label>
-    <input type="number" id="num1" required />
-    <input type="number" id="num2" required />
-    <input type="number" id="num3" required />
-    <input type="number" id="num4" required />
-    <input type="number" id="num5" required />
+    <form action="" class="mainForm">
+      <h1>Mini Max Sum</h1>
+      <h3>Input your array</h3>
+      <div class="formInput card">
+        <label for="num1" class="">First Number </label>
+        <input type="number" id="num1" required />
+        <label for="num2" class="">Second Number </label>
+        <input type="number" id="num2" required />
+        <label for="num3" class="">Third Number </label>
+        <input type="number" id="num3" required />
+        <label for="num4" class="">Fourth Number </label>
+        <input type="number" id="num4" required />
+        <label for="num5" class="">Fifth Number </label>
+        <input type="number" id="num5" required />
+      </div>
 
-    <button type="submit" onclick="SumHandler()">Submit</button>
-
-    <div id="result"></div>
+      <button type="submit" onclick="SumHandler()">Submit</button>
+    </form>
   </body>
-
-  <script>
-    function swap(arr, x, y) {
-      var temp = arr[x];
-      arr[x] = arr[y];
-      arr[y] = temp;
-    }
-    function add(accumulator, a) {
-      return accumulator + a;
-    }
-    function calculateSum(arr, maxSum, minSum) {
-      maxSum = arr.filter((el, i) => i !== 0).reduce((x, y) => add(x, y));
-      minSum = arr
-        .filter((el, i) => i !== arr.length - 1)
-        .reduce((x, y) => add(x, y));
-
-      // print result
-      alert(
-        'Your Input: \n' + arr + '\n Your OutPut\n' + minSum + ' ' + maxSum
-      );
-    }
-
-    function SumHandler() {
-      const num1 = parseInt(document.getElementById('num1').value);
-      const num2 = parseInt(document.getElementById('num2').value);
-      const num3 = parseInt(document.getElementById('num3').value);
-      const num4 = parseInt(document.getElementById('num4').value);
-      const num5 = parseInt(document.getElementById('num5').value);
-
-      let maxSum = 0;
-      let minSum = 0;
-
-      const arr = [num1, num2, num3, num4, num5];
-      // sort array by ascendence
-      for (let i = 0; i < arr.length - 1; i++) {
-        for (let j = 0; j < arr.length; j++) {
-          if (arr[j] > arr[j + 1]) {
-            swap(arr, j, j + 1);
-          }
-        }
-      }
-
-      //cal min max sum
-      calculateSum(arr, maxSum, minSum);
-    }
-  </script>
 </html>
